force-app/main/default/objects/Client_Profitability__c/Client_Profitability__c.object-meta.xml
<CustomObject>
    <label>Client Profitability</label>
    <nameField>
        <displayFormat>Profit-{000000}</displayFormat>
        <label>Profitability Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client  Profitability Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>