force-app/main/default/objects/Client_Profitability__c/fields/Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth__c</fullName>
    <formula>Total_Agency_Fees__c +  Total_Commission_Amount__c  -  Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Worth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>