force-app/main/default/objects/Client_Profitability__c/fields/Profitability_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Profitability_Indicator__c</fullName>
    <formula>IF (Net_Worth__c &lt; 0, IMAGE(&apos;/servlet/servlet.FileDownload?file=015D0000002FsoG&apos;,&apos;&apos;), 
IF(Net_Worth__c = 0, 
IMAGE(&apos;/servlet/servlet.FileDownload?file=015D0000002FsoL&apos;,&apos;&apos;), 
IMAGE(&apos;/servlet/servlet.FileDownload?file=015D0000002FsoV&apos;,&apos;&apos;) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profitability Indicator</label>
    <type>Text</type>
</CustomField>