force-app/main/default/objects/Client_Profitability__c/fields/Total_Agency_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Agency_Fees__c</fullName>
    <label>Total Agency Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>