force-app/main/default/objects/Client_Profitability__c/fields/Total_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Amount__c</fullName>
    <label>Total Commission Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>